# ConsoleSnake

./: .gitignore  CMakeLists.txt  README.md  consoleLib.c  consoleLib.h  consoleMenu.c  consoleMenu.h  gameField.c  gameField.h  helpMenu.c  main.c
Release/: makefile  subdir.mk
